# controllers/contacts.js
@@ -1,78 +1,63 @@
-const mongodb = require('../data/database');
-const ObjectId = require('mongodb').ObjectId;
+const contactModel = require('../models/contacts');
 
 const getAll = async (req, res) => {
-  const result = await mongodb.getDatabase().db().collection('contacts').find();
-  result.toArray().then((contacts) => {
-    res.setHeader('content-type', 'application/json');
+  try {
+    const contacts = await contactModel.getAllContacts();
     res.status(200).json(contacts);
-  });
+  } catch (error) {
+    res.status(500).json({ error: 'Internal server error' });
+  }
 }
 
 const getSingle = async (req, res) => {
-  if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json('Must use a valid contact id to update a contact.');
-  }
-  const contactId = new ObjectId(req.params.id);
-  const result = await mongodb.getDatabase().db().collection('contacts').findOne({ _id: contactId });
-  if (result) {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(result);
-  } else {
-    res.status(404).json({ message: 'Contact not found' });
+  try {
+    const contact = await contactModel.getContactById(req.params.id);
+    if (contact) {
+      res.status(200).json(contact);
+    } else {
+      res.status(404).json({ message: 'Contact not found' });
+    }
+  } catch (error) {
+    res.status(500).json({ error: 'Internal server error' });
   }
 }
 
-// week2
 const createContact = async (req, res) => {
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-    phoneNumber: req.body.phoneNumber
-  };
-  const response = await mongodb.getDatabase().db().collection('contacts').insertOne(contact);
-  if (response.acknowledged) {
-    res.status(201).json(response);
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+  try {
+    const response = await contactModel.createContact(req.body);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+    }
+  } catch (error) {
+    res.status(500).json({ error: 'Internal server error' });
   }
 };
 
 const updateContact = async (req, res) => {
-  if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json('Must use a valid contact id to update a contact.');
-  }
-  const contactId = new ObjectId(req.params.id);
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-    phoneNumber: req.body.phoneNumber
-  };
-  const response = await mongodb.getDatabase().db().collection('contacts').replaceOne({ _id: userId }, contact);
-  console.log(response);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+  try {
+    const response = await contactModel.updateContact(req.params.id, req.body);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+    }
+  } catch (error) {
+    res.status(500).json({ error: 'Internal server error' });
   }
 };
 
 const deleteContact = async (req, res) => {
-  if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json('Must use a valid contact id to update a contact.');
-  }
-  const contactId = new ObjectId(req.params.id);
-  const response = await mongodb.getDatabase().db().collection('contacts').deleteOne({ _id: contactId });
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+  try {
+    const response = await contactModel.deleteContact(req.params.id);
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+    }
+  } catch (error) {
+    res.status(500).json({ error: 'Internal server error' });
   }
 };
 
@@ -82,4 +67,4 @@ module.exports = {
   createContact,
   updateContact,
   deleteContact
-}
+};
