# routes/contacts.js
@@ -1,15 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const contactController = require('../controllers/contacts');
-const validation = require('../middleware/validate')
+const { validateContact } = require('../middleware/validate-contacts')
 const { isAuthenticated } = require("../middleware/authenticate");
 
-router.get('/', contactController.getAll);
-router.get('/:id', contactController.getSingle);
-
-// week2
-router.post('/', isAuthenticated, validation.validateContact, contactController.createContact);
-router.put('/:id', isAuthenticated, validation.validateContact, contactController.updateContact);
+router.get('/', isAuthenticated, contactController.getAll);
+router.get('/:id', isAuthenticated, contactController.getSingle);
+router.post('/', isAuthenticated, validateContact, contactController.createContact);
+router.put('/:id', isAuthenticated, validateContact, contactController.updateContact);
 router.delete('/:id', isAuthenticated, contactController.deleteContact);
 
 module.exports = router;
